<resources>
    <string name="controller_activity_actionbar_name">Controle</string>
    <string name="preferences_file_key">com.example.bluetoothmeonjava.PREFERENCE_FILE_KEY</string>
    <string name="configure_button_activity_actionbar_name">Configuração do botão</string>
    <string name="app_name">Controle WarTank</string>
    <string name="txt_default_value">default value</string>
    <string name="btn_paired_devices">Dispositivos pareados</string>
    <string name="btn_discovered_devices">Discovered Devices</string>
    <string name="string_placeholder">Placeholder</string>
    <string name="btn_send">OK</string>
    <string name="txt_label">Label</string>
    <string name="txt_command">Command</string>
    <string name="menu_settings">Settings</string>
    <string name="button_label_forward">\u2191</string>
    <string name="button_label_rear">\u2193</string>
    <string name="button_label_right">\u2192</string>
    <string name="button_label_left">\u2190</string>
    <string name="button_label_rotate_right">\u21BB</string>
    <string name="button_label_rotate_left">\u21BA</string>
    <string name="button_label_stop">Parar</string>
    <string name="button_label_increase_speed">Aumentar\nvelocidade</string>
    <string name="button_label_decrease_speed">Diminuir\nvelocidade</string>
    <string name="button_label_hyperdrive">Hyperdrive</string>
    <string name="button_label_restore_value">Valores mínimos</string>
    <string name="button_label_raise">Elevar</string>
    <string name="button_label_low">Abaixar</string>
    <string name="button_label_rotate_clockwise_cannon">\u21BB</string>
    <string name="button_label_rotate_counter_clockwise_cannon">\u21BA</string>
    <string name="button_label_fire_cannon">Atirar</string>
    <string name="configure_button_activity_label_hint">button name</string>
    <string name="configure_button_activity_command_hint">command value</string>

    <!-- PREFERENCES CONSTANTS -->
    <string name="preferences_forward_label">forward</string>
    <string name="preferences_rear_label">rear</string>
    <string name="preferences_right_label">right</string>
    <string name="preferences_left_label">left</string>
    <string name="preferences_rotate_right_label">rotate_right</string>
    <string name="preferences_rotate_left_label">rotate_left</string>
    <string name="preferences_stop_label">stop</string>
    <string name="preferences_hyperdrive_label">hyperdrive</string>
    <string name="preferences_restore_minimum_values_label">restore_minimum_values</string>
    <string name="preferences_increase_speed_label">increase_speed</string>
    <string name="preferences_decrease_speed_label">decrease_speed</string>
    <string name="preferences_fire_cannon_label">fire_cannon</string>
    <string name="preferences_rotate_left_cannon_label">rotate_left_cannon</string>
    <string name="preferences_rotate_right_cannon_label">rotate_right_cannon</string>
    <string name="preferences_rise_cannon_label">rise_cannon</string>
    <string name="preferences_low_cannon_label">low_cannon</string>
    <string name="preferences_help_label">help</string>
</resources>
