<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="true"
    tools:context=".ControllerActivity">

    <!--android:background="?attr/colorPrimary"-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        android:src="@drawable/woodland_camo"
        android:scaleType="centerCrop"/>
    -->
    <!--
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/gradiente_toolbar"/>
     -->

    <Button
        android:id="@+id/btn1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnForwardClick"
        android:text="@string/button_label_forward"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRightClick"
        android:text="@string/button_label_right"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnStopClick"
        android:text="@string/button_label_stop"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn1"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn16"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRotateCWCannonClick"
        android:text="@string/button_label_rotate_clockwise_cannon"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@+id/btn13"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/btn12"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnUpCannonClick"
        android:text="@string/button_label_raise"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/btn15"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnIncreaseSpeedClick"
        android:text="@string/button_label_increase_speed"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRotateLeftClick"
        android:text="@string/button_label_rotate_left"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn2"
        app:layout_constraintVertical_bias="0.005" />

    <Button
        android:id="@+id/btn11"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRestoreMinimumValuesClick"
        android:text="@string/button_label_restore_value"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnLeftClick"
        android:text="@string/button_label_left"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btn13"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnFireCannonClick"
        android:text="@string/button_label_fire_cannon"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/btn15"
        app:layout_constraintTop_toBottomOf="@+id/btn12"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRotateRightClick"
        android:text="@string/button_label_rotate_right"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.026" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnDecreaseSpeedClick"
        android:text="@string/button_label_decrease_speed"
        android:textSize="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn11"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnHyperdriveClick"
        android:text="@string/button_label_hyperdrive"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRotateCCWCannonClick"
        android:text="@string/button_label_rotate_counter_clockwise_cannon"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/btn14"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnDownCannonClick"
        android:text="@string/button_label_low"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toEndOf="@+id/btn15"
        app:layout_constraintTop_toBottomOf="@+id/btn13"
        app:layout_constraintVertical_bias="0.018" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/buttton_selector"
        android:onClick="onBtnRearClick"
        android:text="@string/button_label_rear"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn5"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/txt_console"
        android:layout_width="313dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:fadeScrollbars="true"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="--- Console\n"
        android:textColor="@android:color/black"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn14"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>